--- a/Tipsy/Base.lproj/Main.storyboard
+++ b/Tipsy/Base.lproj/Main.storyboard
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Tipsy-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Tipsy" customModuleProvider="target" sceneMemberID="viewController">
@@ -20,13 +20,51 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="43D-sZ-Wyh">
+                                <rect key="frame" x="0.0" y="64" width="375" height="170"/>
+                                <subviews>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" translatesAutoresizingMaskIntoConstraints="NO" id="JHs-BS-Yai">
+                                        <rect key="frame" x="8" y="134" width="359" height="29"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <segments>
+                                            <segment title="10%"/>
+                                            <segment title="15%"/>
+                                            <segment title="18%"/>
+                                            <segment title="20%"/>
+                                        </segments>
+                                    </segmentedControl>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" placeholder="$" textAlignment="right" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="bQf-dB-ckz">
+                                        <rect key="frame" x="8" y="0.0" width="359" height="126"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="126" id="EqM-qA-mcq"/>
+                                        </constraints>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="75"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                                <color key="backgroundColor" red="0.1944264174" green="0.57371117039999997" blue="1" alpha="0.43034771129999999" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="170" id="Iq5-O6-bzA"/>
+                                    <constraint firstItem="bQf-dB-ckz" firstAttribute="leading" secondItem="43D-sZ-Wyh" secondAttribute="leading" constant="8" id="Stx-LP-WFe"/>
+                                    <constraint firstAttribute="trailing" secondItem="bQf-dB-ckz" secondAttribute="trailing" constant="8" id="mGd-wl-rW7"/>
+                                    <constraint firstItem="bQf-dB-ckz" firstAttribute="top" secondItem="43D-sZ-Wyh" secondAttribute="top" id="pK0-bl-VrO"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="43D-sZ-Wyh" secondAttribute="trailing" id="4gf-Bb-XBI"/>
+                            <constraint firstItem="43D-sZ-Wyh" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="Hqv-YB-Xqg"/>
+                            <constraint firstItem="43D-sZ-Wyh" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="tfm-F2-uzW"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="l5g-Jm-hbQ"/>
+                    <navigationItem key="navigationItem" title="Tipsy" id="l5g-Jm-hbQ"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="889" y="793"/>
+            <point key="canvasLocation" x="888.79999999999995" y="792.95352323838085"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Wg1-WH-dU4">
